Add chart for lab6

--- a/ABC/lab5/Lab5.html
+++ b/ABC/lab5/Lab5.html
@@ -21,7 +21,7 @@
         ]);
 
         var options = {
-          title: 'DEGMM perfomance',
+          title: 'DEVGM perfomance',
         //  curveType: 'function',
           legend: { position: 'bottom' }
         };
